# unit-sphere-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/uml/: sphere_class_diagram.puml
src/: great_circle.rs  lib.rs  vector.rs
src/vector/: intersection.rs
