[package]
name = "unit-sphere"
version = "0.5.0"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "A library for performing geometric calculations on the surface of a sphere."
documentation = "https://docs.rs/unit-sphere/"
homepage = "https://github.com/kenba/unit-sphere-rs"
repository = "https://github.com/kenba/unit-sphere-rs"
readme = "README.md"
keywords = ["geometry", "navigation", "sphere"]
categories = ["mathematics", "no-std", "science"]
license = "MIT"
edition = "2021"

[dependencies]
angle-sc = "1.1"
libm = "0.2"
nalgebra = "0.33"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
